Agrega nueva característica v1 INOVA

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <path d="M2 12L12 17L22 12" stroke="currentColor" stroke-width="2"/>
                     </svg>
                 </div>
-                <h1 class="brand-name">Agro<span>Trace</span></h1>
+                <h1 class="brand-name">Inova<span>V1</span></h1>
             </div>
             
             <div class="header-meta">
